# minesweeper

./: .gitignore  index.html  readme.md  styles.css
.github/: copilot-instructions.md
frontend/: Cargo.toml  styles.css
frontend/src/: cell.rs  main.rs
src/: cell.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
